added hover effect on button

--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
         .hero-biggy{
             overflow:hidden;
         }
+        .hero__cta-try-free:hover{
+            background-color: black;
+            color: #fff;
+            transition: all;
+        }
     </style>
 </head>
 <body>
